--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <title>Learning Objectives</title>
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
-
+    <h1>Basic Procedure of Drawing</h1>
     <p>At Mozilla, we’re a global community of</p>
     
     <ul> <!-- changed to list in the tutorial -->
