--- a/pen.html
+++ b/pen.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Learning Objectives1</title>
+  </head>
+  <body>
+    <h1>The first step</h1>
+    <p>At Mozilla, we’re a global community of</p>
+    
+    <ul> <!-- changed to list in the tutorial -->
+      <li>Pen</li>
+      <li>Posture and Action</li>
+      <li>Composition of tone</li>
+    </ul>
 
+    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+
+    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+  </body>
+</html>
