--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <p>At Mozilla, we’re a global community of</p>
     
     <ul> <!-- changed to list in the tutorial -->
-      <li><a href="https://claireeeeey.github.io/backward-design/pen.html">Pen</a></li>
-      <li><a href="https://claireeeeey.github.io/backward-design/posture and action.html">Posture and Action</a></li>
-      <li><a href="https://claireeeeey.github.io/backward-design/composition of tone.html">Composition of tone</a></li>
+      <li>
+        <a href="https://claireeeeey.github.io/backward-design/pen.html">Pen</a>
+      </li>
+      <li>
+        <a href="https://claireeeeey.github.io/backward-design/posture and action.html">Posture and Action</a>
+      </li>
+      <li>
+        <a href="https://claireeeeey.github.io/backward-design/composition of tone.html">Composition of tone</a>
+      </li>
     </ul>
 
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
