--- a/pen.html
+++ b/pen.html
@@ -6,12 +6,18 @@
   </head>
   <body>
     <h1>The first step</h1>
-    <p>At Mozilla, we’re a global community of</p>
+    <p>Before drawing, we need to have a --- pencil. There are something you need to know:</p>
     
-    <ul> <!-- changed to list in the tutorial -->
-      <li>Pen</li>
-      <li>Posture and Action</li>
-      <li>Composition of tone</li>
+    <ul> <!-- start of the list -->
+      <li>Understanding the numbers and letters on the end of pencils.</li>
+        <ul>
+          <li>It is called graphite scale. <br/>"B" stands for soft black, "H" stands for hard, "HB" stands for hard black, and "F" stands for firm. <br/>The numbers classify the degrees of the intensity.</li>
+        </ul>
+      <li>Sharpen a pencil</li>
+        <ul>
+          <li>For a beginner, you can just use a sharpener to start.</li>
+          <li>If you want to be more professional, try to use a utility knife. <br/>Hold the pencil with your non-dominant hand and hold the knife with the other hand firmly. Push the blade slowly with your thumb of your non-dominant hand 
+        </ul>
     </ul>
 
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
