--- a/pen.html
+++ b/pen.html
@@ -16,12 +16,9 @@
       <li>Sharpen a pencil</li>
         <ul>
           <li>For a beginner, you can just use a sharpener to start.</li>
-          <li>If you want to be more professional, try to use a utility knife. <br/>Hold the pencil with your non-dominant hand and hold the knife with the other hand firmly. Push the blade slowly with your thumb of your non-dominant hand 
+          <li>If you want to be more professional: try to use a utility knife. <br/>Hold the pencil with your non-dominant hand and hold the knife with the other hand firmly. <br/>Push the blade slowly with your thumb of your non-dominant hand and remove the wooden layers of the pencil lightly. <br/>The length of the exposed refills should be round half an inch.</li>
+          <li>Be carefull!</li>
         </ul>
     </ul>
-
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
-
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
   </body>
 </html>
