--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     
     <ul> <!-- changed to list in the tutorial -->
       <li>
-        <a href="https://claireeeeey.github.io/backward-design/pen.html">Pen</a>
+        <a href="https://claireeeeey.github.io/backward-design/employees.html">Employees</a>
       </li>
       <li>
-        <a href="https://claireeeeey.github.io/backward-design/posture and action.html">Posture and Action</a>
+        <a href="https://claireeeeey.github.io/backward-design/products.html">Products</a>
       </li>
       <li>
-        <a href="https://claireeeeey.github.io/backward-design/composition of tone.html">Composition of tone</a>
+        <a href="https://claireeeeey.github.io/backward-design/services.html">Services</a>
+      </li>
+      <li>
+        <a href="https://claireeeeey.github.io/backward-design/news.html">News</a>
       </li>
     </ul>
 
