--- a/index.html
+++ b/index.html
@@ -2,29 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Learning Objectives</title>
+    <title>my company</title>
   </head>
   <body>
-    <h1>Basic Procedure of Drawing</h1>
-    <p>At Mozilla, we’re a global community of</p>
-    
-    <ul> <!-- changed to list in the tutorial -->
-      <li>
-        <a href="https://claireeeeey.github.io/backward-design/employees.html">Employees</a>
-      </li>
-      <li>
-        <a href="https://claireeeeey.github.io/backward-design/products.html">Products</a>
-      </li>
-      <li>
-        <a href="https://claireeeeey.github.io/backward-design/services.html">Services</a>
-      </li>
-      <li>
-        <a href="https://claireeeeey.github.io/backward-design/news.html">News</a>
-      </li>
-    </ul>
-
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
-
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <h1>Clairyn</h1>
+    <p>Discover your life style <br/>About Us <br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and practicality. <br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
+    <p>Know More About Us:
+    <p><a href="https://claireeeeey.github.io/backward-design/employees.html">Our Team</a></p>
+    <p><a href="https://claireeeeey.github.io/backward-design/products.html">Our Things</a></p>
+    <p><a href="https://claireeeeey.github.io/backward-design/services.html">Services</a></p>
+    <p><a href="https://claireeeeey.github.io/backward-design/news.html">News</a></p>
   </body>
 </html>
