--- a/employees.html
+++ b/employees.html
@@ -2,23 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Learning Objectives1</title>
+    <title>Employees</title>
   </head>
   <body>
-    <h1>The first step</h1>
-    <p>Before drawing, we need to have a --- pencil. There are something you need to know:</p>
-    
+    <h1>Our Team</h1>
+    <p>Any one of our employees is at the heart of what we do.</p>
+    <p>Clairyn T</p>
     <ul> <!-- start of the list -->
-      <li>Understanding the numbers and letters on the end of pencils.</li>
-        <ul>
-          <li>It is called graphite scale. <br/>"B" stands for soft black, "H" stands for hard, "HB" stands for hard black, and "F" stands for firm. <br/>The numbers classify the degrees of the intensity.</li>
-        </ul>
-      <li>Sharpen a pencil</li>
-        <ul>
-          <li>For a beginner, you can just use a sharpener to start.</li>
-          <li>If you want to be more professional: try to use a utility knife. <br/>Hold the pencil with your non-dominant hand and hold the knife with the other hand firmly. <br/>Push the blade slowly with your thumb of your non-dominant hand and remove the wooden layers of the pencil lightly. <br/>The length of the exposed refills should be round half an inch.</li>
-          <li>Be carefull!</li>
-        </ul>
+      <li>CEO & Founder</li>
+    </ul>
+    <p>Hibara Kyoya</p>
+    <ul> <!-- start of the list -->
+      <li>Coporation Manager</li>
+    </ul>
+    <p>Dino Cavaillone</p>
+    <ul> <!-- start of the list -->
+      <li>Designer & Developer</li>
     </ul>
   </body>
-</html>
+</html
