--- a/products.html
+++ b/products.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Products</title>
+  </head>
+  <body>
+    <h1>Our Things</h1>
+    <p>Our goal is to make our products a symbol of high qyality and aesthetics.</p>
+    <p>Bed Frame</p>
+    <ul> <!-- start of the list -->
+      <li>Clean lines, high quality texture, and handcrafted</li>
+    </ul>
+    <p>Tableware</p>
+    <ul> <!-- start of the list -->
+      <li>Everything you need on the table, including glasses, serverware, flatware, and accessories</li>
+    </ul>
+    <p>Homeware</p>
+    <ul> <!-- start of the list -->
+      <li>Limited production of furniture, each piece is inherently unique</li>
+    </ul>
+  </body>
+</html
