--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Clairyn</h1>
-    <p>Discover your life style <br/>About Us <br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and practicality. <br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
+    <p>Discover your life style <br/>About Us <br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality. <br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
     <p>Know More About Us:
     <p><a href="https://claireeeeey.github.io/backward-design/employees.html">Our Team</a></p>
     <p><a href="https://claireeeeey.github.io/backward-design/products.html">Our Things</a></p>
