--- a/services.html
+++ b/services.html
@@ -2,23 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Learning Objectives1</title>
+    <title>Services</title>
   </head>
   <body>
-    <h1>The first step</h1>
-    <p>First, we need to have the posture and action of what you want to draw, either someone or something.</p>
-    
+    <h1>Our services</h1>
+    <p>Customization</p>
     <ul> <!-- start of the list -->
-      <li>Capture the outline of the posture and action using simple straight lines.</li>
-        <ul>
-          <li>It may be hard to imagine what it looks like, so it will be easier to use photos or real obkects as reference. <br/>In this step, you don't need to rush to draw the whole figure, we just need the general structure.</li>
-        </ul>
-      <li>Define the form</li>
-        <ul>
-          <li>For a beginner, you can just use a sharpener to start.</li>
-          <li>If you want to be more professional: try to use a utility knife. <br/>Hold the pencil with your non-dominant hand and hold the knife with the other hand firmly. <br/>Push the blade slowly with your thumb of your non-dominant hand and remove the wooden layers of the pencil lightly. <br/>The length of the exposed refills should be round half an inch.</li>
-          <li>Be carefull!</li>
-        </ul>
+      <li>We offer exclusive customization services.</li>
+      <li>Order your own products that fit your life style.</li>
+    </ul>
+    <p>Delivery and Assembly</p>
+    <ul> <!-- start of the list -->
+      <li>We help you at your home: free delivery and furniture mounting.</li>
     </ul>
   </body>
 </html>
