--- a/news.html
+++ b/news.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>News</title>
+  </head>
+  <body>
+    <h1>Spring 2033 Collection</h1>
+    <p>Explore our Spring 2033 collection, now in stores and online</p>
+    <ul> <!-- start of the list -->
+      <li>2033 trends: curvaceous lines in furnitures</li>
+      <li>Our innovative technology: the use of cosmic materials</li>
+    </ul>
+    <p>The theme for this season's collection is Sentimentality and Perception. <br/>We hope that people can feel more emotional meaning in our products and make their time at home more comfortable.</p>
+  </body>
+</html>
