--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>Clairyn</h1>
     <p>Discover your life style <br/>About Us <br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality. <br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
     <p>Know More About Us:
-    <p><a href="https://claireeeeey.github.io/backward-design/employees.html">Our Team</a></p>
-    <p><a href="https://claireeeeey.github.io/backward-design/products.html">Our Things</a></p>
-    <p><a href="https://claireeeeey.github.io/backward-design/services.html">Services</a></p>
-    <p><a href="https://claireeeeey.github.io/backward-design/news.html">News</a></p>
+    <p><a href="http://claireeeeey.github.io/backward-design/employees.html">Our Team</a></p>
+    <p><a href="http://claireeeeey.github.io/backward-design/products.html">Our Things</a></p>
+    <p><a href="http://claireeeeey.github.io/backward-design/services.html">Services</a></p>
+    <p><a href="http://claireeeeey.github.io/backward-design/news.html">News</a></p>
   </body>
 </html>
