--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Know More About Us:
     <p><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
     <p><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
-    <p><a href="https://claireeeeey.github.io/multipage/services.html">Services</a></p>
-    <p><a href="https://claireeeeey.github.io/multipage/news.html">News</a></p>
+    <p><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
+    <p><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
   </body>
 </html>
