--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>my company</title>
   </head>
   <body>
-    <h1>Clairyn</h1>
-    <p>Discover your life style <br/>About Us <br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality. <br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
-    <p>Know More About Us:
-    <p><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
-    <p><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
-    <p><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
-    <p><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed">Clairyn</h1>
+    <p style="text-align:center; font-family:Optima; color:IndianRed"><i>Discover your life style</i></p>
+    <p style="text-align:center; font-family:Optima; color:#795548">About Us</p>
+    <p style="text-align:center; font-family:Optima; color:#795548">Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality.</p>
+    <p style="text-align:center; font-family:Optima; color:#795548">We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
+    <p style="text-align:center; font-family:Optima; color:#795548">Know More About Us:</p>
+    <p style="text-align:center; font-family:Optima; color:#795548"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
   </body>
 </html>
