--- a/employees.html
+++ b/employees.html
@@ -2,22 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Employees</title>
+    <title>my company</title>
   </head>
   <body>
-    <h1>Our Team</h1>
-    <p>Any one of our employees is at the heart of what we do.</p>
-    <p>Clairyn T</p>
-    <ul> <!-- start of the list -->
-      <li>CEO & Founder</li>
-    </ul>
-    <p>Hibara Kyoya</p>
-    <ul> <!-- start of the list -->
-      <li>Coporation Manager</li>
-    </ul>
-    <p>Dino Cavaillone</p>
-    <ul> <!-- start of the list -->
-      <li>Designer & Developer</li>
-    </ul>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto;">Clairyn</h1>
+    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto;"><br/><i>Discover your life style</i></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>About Us</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality.</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>Know More About Us:</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/employees.html"><br/>Our Team</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/products.html"><br/>Our Things</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/services.html"><br/>Our services</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/news.html"><br/>Our News</a></p>
   </body>
-</html
+</html>
