--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>my company</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 400px">Clairyn</h1>
-    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 400px"><i>Discover your life style</i></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px">About Us</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px">Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality.</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px">We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px">Know More About Us:</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 400px"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>Clairyn</h1>
+    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/><i>Discover your life style</i></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/>About Us</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality.</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/>Know More About Us:</p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
+    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
   </body>
 </html>
