--- a/employees.html
+++ b/employees.html
@@ -2,18 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>my company</title>
+    <title>Employees</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto;">Clairyn</h1>
-    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto;"><br/><i>Discover your life style</i></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>About Us</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>Since Clairyn's establishment in 2033, our furniture has gained popularity among customers for its unique creativity and functionality.</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>We aim to make ordinary objects with extraordinary designs to make your life more convenient and interesting.</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><br/>Know More About Us:</p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/employees.html"><br/>Our Team</a></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/products.html"><br/>Our Things</a></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/services.html"><br/>Our services</a></p>
-    <p style="text-align:center; font-family:Optima; color:#795548; width: 600px; margin: 0 auto;"><a href="https://claireeeeey.github.io/multipage/news.html"><br/>Our News</a></p>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Our Team</h1>
+    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/><i>Any one of our employees is at the heart of what we do.</i></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Clairyn T</strong></p>
+    <ul> <!-- start of the list -->
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">CEO & Founder</li>
+    </ul>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><strong>Hibara Kyoya</strong></p>
+    <ul> <!-- start of the list -->
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Coporation Manager</li>
+    </ul>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><strong>Dino Cavaillone</strong></p>
+    <ul> <!-- start of the list -->
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Designer & Developer</li>
+    </ul>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
   </body>
 </html>
