--- a/products.html
+++ b/products.html
@@ -5,19 +5,23 @@
     <title>Products</title>
   </head>
   <body>
-    <h1>Our Things</h1>
-    <p>Our goal is to make our products a symbol of high qyality and aesthetics.</p>
-    <p>Bed Frame</p>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Our Things</h1>
+    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/><i>Our goal is to make our products a symbol of high qyality and aesthetics.</i></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Bed Frame</strong></p>
     <ul> <!-- start of the list -->
-      <li>Clean lines, high quality texture, and handcrafted</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Clean lines, high quality texture, and handcrafted</li>
     </ul>
-    <p>Tableware</p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><strong>Tableware</strong></p>
     <ul> <!-- start of the list -->
-      <li>Everything you need on the table, including glasses, serverware, flatware, and accessories</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Everything you need on the table, including glasses, serverware, flatware, and accessories</li>
     </ul>
-    <p>Homeware</p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><strong>Homeware</strong></p>
     <ul> <!-- start of the list -->
-      <li>Limited production of furniture, each piece is inherently unique</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Limited production of furniture, each piece is inherently unique</li>
     </ul>
+<p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
   </body>
-</html
+</html>
