--- a/services.html
+++ b/services.html
@@ -5,15 +5,19 @@
     <title>Services</title>
   </head>
   <body>
-    <h1>Our services</h1>
-    <p>Customization</p>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Our services</h1>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Customization</strong></p>
     <ul> <!-- start of the list -->
-      <li>We offer exclusive customization services.</li>
-      <li>Order your own products that fit your life style.</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">We offer exclusive customization services.</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Order your own products that fit your life style.</li>
     </ul>
-    <p>Delivery and Assembly</p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><strong>Delivery and Assembly</strong></p>
     <ul> <!-- start of the list -->
-      <li>We help you at your home: free delivery and furniture mounting.</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">We help you at your home: free delivery and furniture mounting.</li>
     </ul>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
   </body>
 </html>
