--- a/news.html
+++ b/news.html
@@ -5,12 +5,16 @@
     <title>News</title>
   </head>
   <body>
-    <h1>Spring 2033 Collection</h1>
-    <p>Explore our Spring 2033 collection, now in stores and online</p>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Spring 2033 Collection</h1>
+    <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>The theme for this season's collection is Sentimentality and Perception. <br/>We hope that people can feel more emotional meaning in our products and make their time at home more comfortable.</p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Explore our Spring 2033 collection, now in stores and online</strong></p>
     <ul> <!-- start of the list -->
-      <li>2033 trends: curvaceous lines in furnitures</li>
-      <li>Our innovative technology: the use of cosmic materials</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">2033 trends: curvaceous lines in furnitures</li>
+      <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Our innovative technology: the use of cosmic materials</li>
     </ul>
-    <p>The theme for this season's collection is Sentimentality and Perception. <br/>We hope that people can feel more emotional meaning in our products and make their time at home more comfortable.</p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
   </body>
 </html>
