--- a/employees.html
+++ b/employees.html
@@ -5,7 +5,7 @@
     <title>Employees</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Our Team</h1>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>Our Team</h1>
     <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/><i>Any one of our employees is at the heart of what we do.</i></p>
     <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Clairyn T</strong></p>
     <ul> <!-- start of the list -->
