--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
     <title>News</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Spring 2033 Collection</h1>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>Spring 2033 Collection</h1>
     <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>The theme for this season's collection is Sentimentality and Perception. <br/>We hope that people can feel more emotional meaning in our products and make their time at home more comfortable.</p>
     <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Explore our Spring 2033 collection, now in stores and online</strong></p>
     <ul> <!-- start of the list -->
