--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <title>Products</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Our Things</h1>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>Our Things</h1>
     <p style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/><i>Our goal is to make our products a symbol of high qyality and aesthetics.</i></p>
     <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Bed Frame</strong></p>
     <ul> <!-- start of the list -->
