--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <title>Services</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto">Our services</h1>
+    <h1 style="text-align:center; font-family:Optima; color:IndianRed; width: 600px; margin: 0 auto"><br/>Our services</h1>
     <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><br/><strong>Customization</strong></p>
     <ul> <!-- start of the list -->
       <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">We offer exclusive customization services.</li>
