--- a/employees.html
+++ b/employees.html
@@ -20,8 +20,8 @@
       <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Designer & Developer</li>
     </ul>
     <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html"><br/>Our Things</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html"><br/>Our services</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html"><br/>Our News</a></p>
   </body>
 </html>
