--- a/news.html
+++ b/news.html
@@ -12,9 +12,9 @@
       <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">2033 trends: curvaceous lines in furnitures</li>
       <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">Our innovative technology: the use of cosmic materials</li>
     </ul>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html">Our services</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/"><br/>Return to Homepage</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html"><br/>Our Team</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html"><br/>Our Things</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/services.html"><br/>Our services</a></p>
   </body>
 </html>
