--- a/services.html
+++ b/services.html
@@ -15,9 +15,9 @@
     <ul> <!-- start of the list -->
       <li style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto">We help you at your home: free delivery and furniture mounting.</li>
     </ul>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/">Return to Homepage</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html">Our Team</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html">Our Things</a></p>
-    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html">Our News</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/"><br/>Return to Homepage</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/employees.html"><br/>Our Team</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/products.html"><br/>Our Things</a></p>
+    <p style="font-family:Optima; color:#795548; width: 600px; margin: 0 auto"><a href="https://claireeeeey.github.io/multipage/news.html"><br/>Our News</a></p>
   </body>
 </html>
